--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 h1 {
-            text-align: center;
+            text-alignhttps://www.svgrepo.com/show/345221/three-dots.svg: center;
         }
         table.middle {
             border: 1px solid black;
