--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
 h1 {
             text-alignhttps://www.svgrepo.com/show/345221/three-dots.svg: center;
         }
+td{
+	border:1px solid black;
+}
         table.middle {
             border: 1px solid black;
             border-spacing: 1px;
